@@ -7,6 +7,7 @@ import ca.uhn.fhir.validation.SingleValidationMessage;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.utilities.validation.ValidationMessage;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -39,7 +40,7 @@ abstract class BaseValidatorBridge implements IValidatorModule {
 				hapiMessage.setMessageId(riMessage.getMessageId());
 			}
 			if (riMessage.sliceText != null && riMessage.sliceText.length > 0) {
-				hapiMessage.setSliceMessages(List.of(riMessage.sliceText));
+				hapiMessage.setSliceMessages(Arrays.asList(riMessage.sliceText));
 			}
 			theCtx.addValidationMessage(hapiMessage);
 		}
